k8s-scripts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapi-deployment
  labels:
    app: demoapi
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: demoapi
  template:
    metadata:
      labels:
        app: demoapi
    spec:
      containers:
        - name: demoapi
          image: registry.local:5000/demo-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
