k8s-scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapi-service
spec:
  type: ClusterIP
  selector:
    app: demoapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
